--- a/src/app.html
+++ b/src/app.html
@@ -30,7 +30,16 @@
     <link rel="icon" type="image/png" sizes="512x512" href="./android-chrome-512x512.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./icon-32x32.png">
 		%sveltekit.head%
-	</head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2JVXY879H1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-2JVXY879H1');
+    </script>
+  </head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
