--- a/src/app.html
+++ b/src/app.html
@@ -29,7 +29,10 @@
     <link rel="icon" type="image/png" sizes="192x192" href="./icon-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="./android-chrome-512x512.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./icon-32x32.png">
-		%sveltekit.head%
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Dela+Gothic+One&family=Michroma&family=Noto+Serif+JP:wght@200..900&family=Saira+Stencil+One&display=swap" rel="stylesheet">
+    %sveltekit.head%
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-2JVXY879H1"></script>
     <script>
