html2canvasから独自canvas描画へ移行

--- a/src/app.html
+++ b/src/app.html
@@ -31,7 +31,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./icon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Dela+Gothic+One&family=Michroma&family=Noto+Serif+JP:wght@200..900&family=Saira+Stencil+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Dela+Gothic+One&family=Michroma&family=Noto+Serif+JP:wght@200..900&family=Saira+Stencil+One&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900">
     %sveltekit.head%
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-2JVXY879H1"></script>
