--- a/src/app.html
+++ b/src/app.html
@@ -16,6 +16,8 @@
     <meta name="description" content="GQuuuuuuXのアイキャッチ風のアニメ画像を生成するアプリです" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="GQuuuuuuXアイキャッチ風アニメ画像ジェネレータ" />
+    <meta property="og:url" content="https://bills-appworks.github.io/GQeyecatch/" />
+    <meta property="og:description" content="GQuuuuuuXのアイキャッチ風のアニメ画像を生成するアプリです" />
     <meta property="og:site_name" content="GQuuuuuuXアイキャッチ風アニメ画像ジェネレータ" />
     <meta property="og:locale" content="ja_JP" />
     <meta property="og:image:type" content="image/png" />
